--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <head>
   <meta charset="UTF-8">
   <title>FB Auth Test</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <h1>FB AUTH TEST</h1>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-xs-12'>
+        <h1>FB AUTH TEST</h1>
+        <button class='btn btn-default' id='login'>Login with Twitter</button>
+      </div>
+    </div>
+  </div>
   <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
   <script src='main.js'></script>
 </body>
